[tool.poetry]
name = "loopstatus"
version = "0.1.0"
description = "a simple and cool way to cycle automatically through online, idle, dnd, (and optionally invis) on discord!"
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
